--- a/source/style/common/greating.scss
+++ b/source/style/common/greating.scss
@@ -6,7 +6,10 @@
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
   &_text {
-    font: 45px 'Arial', sans-serif;
+    font-size: 20px;
+    font-family:  'roboto', sans-serif;
+    font-weight: bold;
+    font-style: italic;
     color: #fff;
   }
 
