--- a/source/style/helpers/_settings.scss
+++ b/source/style/helpers/_settings.scss
@@ -1,15 +1,14 @@
-*,
-*:after,
-*:before {
+//basic style
+
+* {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
 }
 
 html {
-	width: 100%;
 	height: 100%;
-	font-size: 1rem;
+	width: 100%;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -19,10 +18,12 @@ html {
 
 body {
 	font-family: 'roboto', sans-serif;
-	min-width: 300px;
-	width: 100%;
-	padding: 0;
 	height: 100%;
+	min-width: 300px;
+	padding: 0;
+	width: 100%;
+	position: relative;
+	display: table;
 }
 
 h1,
@@ -40,14 +41,14 @@ img {
 }
 
 a {
-	text-decoration: none;
 	outline: none;
+	text-decoration: none;
 
 	&:hover,
 	&:active,
 	&:focus {
-		text-decoration: none;
 		outline: none;
+		text-decoration: none;
 	}
 
 }
@@ -60,9 +61,15 @@ button {
 
 }
 
-.page-wrapper {
+.section__wrapper {
+	margin: 0 auto;
+	max-width: 1800px;
+}
+
+.wrapper {
+	min-height: 100%;
+	overflow: hidden;
 	position: relative;
-	height: 100%;
 }
 
 
