--- a/source/style/pages/index.scss
+++ b/source/style/pages/index.scss
@@ -1,56 +1,48 @@
 .welcome {
   background: url("../img/bg-forest.png") no-repeat center/cover;
   height: 100%;
-  overflow: hidden;
-  position: relative;
   width: 100%;
 
   &__inner {
-    align-items: center;
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
-    max-width: 1800px;
-    margin: 0 auto;
     padding: 20px 20px 40px 20px;
   }
 
   &__auth-btn {
+    align-self: flex-end;
     background-color: inherit;
-    border: 1px solid #ffffff;
+    border: 1px solid $white;
     border-radius: 20px;
-    color: #ffffff;
+    color: $white;
     cursor: pointer;
     font-family: 'roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: $middleFont;
+    font-weight: $mediumWeight;
     line-height: 2.1;
     margin-bottom: 20px;
     overflow: hidden;
     padding: 5px 29px;
     transition: all .5s;
-    align-self: flex-end;
 
     &:hover {
-      background: #4e8839;
+      background: $greenHover;
       border: 1px solid #729e19;
     }
   }
 
   &__card {
-    position: absolute;
     margin: auto;
     display: block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 
   &__footer {
-    color: #fff;
-    font-weight: 300;
+    color: $white;
+    font-weight: $lightWeight;
     text-align: center;
+    margin-top: 30px;
   }
 }
 
@@ -62,30 +54,6 @@
 
   &__content {
     padding: 40px 66px;
-  }
-
-  &__photo {
-    width: 141px;
-    height: 141px;
-    background: url("../img/ava.jpg") no-repeat center/cover;
-    border-radius: 50%;
-    margin: 0 auto 20px;
-  }
-
-  &__name {
-    color: #fff;
-    font-size: 28px;
-    font-weight: 500;
-    line-height: 1.1;
-    margin-bottom: 9px;
-  }
-
-  &__prof {
-    opacity: .8;
-    color: #fff;
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 30px;
   }
 
 }
