Начал верстку about, разбил страницу на логические блоки

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -16,6 +16,12 @@
 //-Blocks
 @import "blocks/social-icons";
 @import "blocks/user";
+@import "blocks/hamburger";
+@import "blocks/welcom";
+@import "blocks/skills-list";
+@import "blocks/skills-group";
+@import "blocks/section-title";
+@import "blocks/welcom-nav";
 
 //-Pages style
 @import "pages/index";
