--- a/source/style/pages/index.scss
+++ b/source/style/pages/index.scss
@@ -1,50 +1,4 @@
-.welcome {
-  background: url("../img/bg-forest.png") no-repeat center/cover;
-  height: 100%;
-  width: 100%;
 
-  &__inner {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
-    padding: 20px 20px 40px 20px;
-  }
-
-  &__auth-btn {
-    align-self: flex-end;
-    background-color: inherit;
-    border: 1px solid $white;
-    border-radius: 20px;
-    color: $white;
-    cursor: pointer;
-    font-family: 'roboto', sans-serif;
-    font-size: $middleFont;
-    font-weight: $mediumWeight;
-    line-height: 2.1;
-    margin-bottom: 20px;
-    overflow: hidden;
-    padding: 5px 29px;
-    transition: all .5s;
-
-    &:hover {
-      background: $greenHover;
-      border: 1px solid #729e19;
-    }
-  }
-
-  &__card {
-    margin: auto;
-    display: block;
-  }
-
-  &__footer {
-    color: $white;
-    font-weight: $lightWeight;
-    text-align: center;
-    margin-top: 30px;
-  }
-}
 
 .card {
   border-radius: 4px 5px 5px 4px;
@@ -84,12 +38,12 @@
     fill: #fff;
     opacity: .5;
 
-    &_github {
+    &--github {
       width: 26px;
       height: 22px;
     }
 
-    &_in {
+    &--in {
       width: 24px;
       height: 22px;
     }
@@ -101,43 +55,4 @@
   }
 }
 
-.welcome-menu {
-  &__list {
-    display: flex;
-  }
 
-  &__item {
-    display: inline-flex;
-    background-color: #6c9c5a;
-    position: relative;
-    flex-grow: 1;
-
-    &:hover {
-      background-color: #4e8839;
-    }
-
-    &:before {
-      position: absolute;
-      content: "";
-      width: 2px;
-      top: 0;
-      bottom: 0;
-      left: -2px;
-      background-color: #dee3e7;
-      opacity: 0.5;
-
-      &:first-child {
-        content: none;
-      }
-    }
-  }
-
-  &__link {
-    font-size: 16px;
-    font-weight: 500;
-    color: #fff;
-    display: block;
-    line-height: 2;
-    padding: 6px 32px;
-  }
-}
