--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -1,5 +1,6 @@
-include blocks/_mixins
+include blocks/mixins
 include blocks/user
+include blocks/header
 
 block variables
 
@@ -8,9 +9,9 @@ html
   head
     meta(charset="utf-8")
     title #{title}
-    meta(content="" name="author")
-    meta(content="" name="description")
-    meta(content="" name="keywords")
+    meta(content="Arseniy Berezin" name="author")
+    meta(content="`${description}`" name="description")
+    meta(content="`${keywords}`" name="keywords")
     meta(content="width=device-width, initial-scale=1" name="viewport")
     meta(content="ie=edge" http-equiv="x-ua-compatible")
 
