--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -3,8 +3,61 @@ extends ../_template
 block variables
     -
         var
-            title = 'Обо мне|Арсений Березин frontend developer'
+            title = 'Обо мне|Арсений Березин frontend developer',
+            description = 'frontend-developer Berezin Arseniy, web-developer',
+            keywords = 'about Berezin Arseniy, web, web-developer website'
 
 block content
     .wrapper
-        h1 Block Page
+        +header('portfolio')
+        section.section.about
+            .about__col.about__col--left
+                svg.about__triangle.about__triangle--left(viewBox="0 0 900.006 1013.986" preserveAspectRatio="none")
+                    use(xlink:href="assets/img/sprite.svg#about_bg_left")
+                .about__wrapper.about__wrapper--left
+                    +sectionTitle('about_header', 'Обо мне')
+                    .about
+                        .about__photo(style="background: url('assets/img/ava.jpg')")
+                        +blockTitle('Кто я')
+                        .about__info
+                            p
+                                | Я веб разработчик из Волгограда. Мне 22 года. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                                | Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+            .about__col.about__col--right
+                svg.about__triangle.about__triangle--right(viewBox="0 0 900.331 1009.986" preserveAspectRatio="none")
+                    use(xlink:href="assets/img/sprite.svg#about_bg_right")
+                .about__wrapper.about__wrapper--right
+                    .skills
+                        +blockTitle('Чем я вам могу быть полезен')
+                        .about__info
+                            p
+                                |Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
+                        ul.skills-group
+                            li.skills-group__item
+                                span.skills-group__title Frontend
+                                +skills({
+                                    html: 'HTML5',
+                                    css: 'CSS3',
+                                    js: 'JavaScript',
+                                    jquery: 'jQuery',
+                                    svg: 'SVG'
+                                })
+                            li.skills-group__item
+                                span.skills-group__title Backend
+                                +skills({
+                                    php: 'PHP',
+                                    mySQL: 'MySQL',
+                                    postgres: 'PostgreSQL',
+                                    nodeJS: 'Node.JS',
+                                    mongo: 'MongoDB'
+                                })
+                            li.skills-group__item
+                                span.skills-group__title Workflow
+                                +skills({
+                                    git: 'Git',
+                                    gulp: 'Gulp',
+                                    bower: 'Bower',
+                                    yarn: 'Yarn',
+                                    webpack: 'webpack'
+                                })
+        section.section.map#map
