Добавил и стилизовал header

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -22,6 +22,10 @@
 @import "blocks/skills-group";
 @import "blocks/section-title";
 @import "blocks/welcom-nav";
+@import "blocks/map";
+@import "blocks/header";
+@import "blocks/card";
+@import "blocks/block-title";
 
 //-Pages style
 @import "pages/index";
