--- a/source/style/helpers/_fonts.scss
+++ b/source/style/helpers/_fonts.scss
@@ -93,3 +93,36 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+  font-family: 'sansus-webssimo';
+  src: url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Regular/sansus_webissimo-regular.eot');
+  src: url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Regular/sansus_webissimo-regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Regular/sansus_webissimo-regular.woff2') format('woff2'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Regular/sansus_webissimo-regular.woff') format('woff'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Regular/sansus_webissimo-regular.ttf') format('truetype'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Regular/sansus_webissimo-regular.svg#sansus_webissimoregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'sansus-webssimo';
+  src: url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Italic/sansus_webissimo-italic.eot');
+  src: url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Italic/sansus_webissimo-italic.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Italic/sansus_webissimo-italic.woff2') format('woff2'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Italic/sansus_webissimo-italic.woff') format('woff'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Italic/sansus_webissimo-italic.ttf') format('truetype'),
+  url('../fonts/Sansus_Webssimo/Sansus_Webissimo_Italic/sansus_webissimo-italic.svg#sansus_webissimoitalic') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+
+
+@mixin roboto() {
+  font-family: 'roboto', sans-serif;
+}
+
+@mixin sansusWebsimmo() {
+  font-family: 'sansus-webssimo', sans-serif;
+}
