--- a/source/style/helpers/_variables.scss
+++ b/source/style/helpers/_variables.scss
@@ -4,6 +4,8 @@ $greenHover: #4e8839;
 $white: #ffffff;
 $sectionTitleColor: #373e42;
 $blockTitleColor: #566358;
+$bgAboutLeft: #ebefe2;
+$bgAboutRight:#f4f5f0;
 
 //-Text
 $lightWeight: 300;
