--- a/source/style/blocks/_section-title.scss
+++ b/source/style/blocks/_section-title.scss
@@ -12,7 +12,7 @@
 
   &__text {
     color: $sectionTitleColor;
-    @include roboto;
+    @include sansusWebssimo;
     font-size: 63px;
     font-weight: $regularWeight;
     line-height: 1;
