--- a/source/style/blocks/_skills-list.scss
+++ b/source/style/blocks/_skills-list.scss
@@ -1,8 +1,22 @@
-.skills__item {
-  list-style: none;
-  margin-right: 40px;
-  display: inline-block;
+.skills {
+
+  &__item {
+    display: inline-block;
+    list-style: none;
+    margin-right: 37px;
+    margin-bottom: 40px;
+  }
+
+  &__title {
+    color: #566358;
+    display: block;
+    font-family: 'roboto', sans-serif;
+    font-size: 28px;
+    font-weight: $mediumWeight;
+    margin-bottom: 20px;
+  }
 }
+
 
 .skill {
   position: relative;
