добавил footer, copyright, поправил разметку блока скиллов

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -26,6 +26,7 @@
 @import "blocks/block-title";
 @import "blocks/block-text";
 @import "blocks/footer";
+@import "blocks/copyright";
 
 //-Pages
 @import "pages/welcom";
