--- a/source/style/helpers/_variables.scss
+++ b/source/style/helpers/_variables.scss
@@ -11,6 +11,7 @@ $bgAboutRight:#f4f5f0;
 $lightWeight: 300;
 $regularWeight: 400;
 $mediumWeight: 500;
+$hardWeight: 700;
 $middleFont: 16px;
 $smallFont: 14px;
 
@@ -23,3 +24,7 @@ $transition-time: 0.4s;
 $rotation: 45deg;
 $translateY: ($height-icon / 2);
 $translateX: 0;
+
+//-Sizes
+$copyrightHeight: 38px;
+$footerHeight: 147px;
