--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -2,6 +2,7 @@ include blocks/mixins
 include blocks/user
 include blocks/header
 include blocks/footer
+include blocks/copyright
 
 block variables
 
