--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -79,3 +79,4 @@ block content
                             svg.contacts__icon
                                 use(xlink:href="assets/img/sprite.svg#map_marker")
         +footer()
+        +copyright('any-pages')
