--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -21,5 +21,4 @@ block content
               })
             +nav('welcome-menu', {'Мои работы':'./portfolio.html', 'Обо мне':'./about.html', 'Блог':'./blog.html'})
           //-form.card_autorization
-        footer.welcome__footer
-          p © Березин Арсений | Создано с любовью в LoftSchool | 2017
+  +copyright('index-page')
