--- a/source/style/pages/_welcom.scss
+++ b/source/style/pages/_welcom.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
-    padding: 20px 20px 40px 20px;
+    padding: 20px 20px 128px 20px;
   }
 
   &__auth-btn {
@@ -38,10 +38,10 @@
     display: block;
   }
 
-  &__footer {
-    color: $white;
-    font-weight: $lightWeight;
-    text-align: center;
-    margin-top: 30px;
-  }
+  //&__footer {
+  //  color: $white;
+  //  font-weight: $lightWeight;
+  //  text-align: center;
+  //  margin-top: 30px;
+  //}
 }
