--- a/source/template/blocks/footer.pug
+++ b/source/template/blocks/footer.pug
@@ -2,9 +2,9 @@ mixin footer()
     footer.footer
         .footer__item.footer__item--left
             p.footer__info
-                |Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
+                |Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
         .footer__item.footer__item--center
-            +nav('footer__nav', {
+            +nav('footer-nav', {
                 'Мои работы': './portfolio.html',
                 'Обо мне': './about.html',
                 'Блог': './blog.html',
@@ -17,6 +17,6 @@ mixin footer()
                 in: "https://www.linkedin.com/in/arseny-berezin-b58567113/"
             })
         .footer__item.footer__item--right
-            p.quote
+            p.footer__quote.footer__quote-text
                 | Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает, где вы живете.
-                | — Martin Golding
+            p.footer__quote.footer__quote-author — Martin Golding
