--- a/source/template/blocks/header.pug
+++ b/source/template/blocks/header.pug
@@ -14,5 +14,4 @@ mixin header(svgName)
                 svg(class=`header__${svgName}`, viewBox="0 0 1175.495 313.961")
                     use(xlink:href="assets/img/sprite.svg#" + `${svgName}_header`)
                 +user('header')
-            svg.header__arrow.js-header-arrow(viewBox="0 0 25.18 16.164")
-                use(xlink:href="assets/img/sprite.svg#arrow_down")
+            +arrow('header')
