--- a/source/style/blocks/_header.scss
+++ b/source/style/blocks/_header.scss
@@ -40,22 +40,21 @@
     transform: translateY(45%);
   }
 
-  &__arrow {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    display: block;
-    opacity: .7;
-    bottom: 70px;
-    fill: $white;
-    max-width: 26px;
-    max-height: 16px;
-    cursor: pointer;
-    z-index: 10;
-
-    &:hover {
-      opacity: 1;
-    }
+  //&__arrow {
+  //  position: absolute;
+  //  left: 50%;
+  //  transform: translateX(-50%);
+  //  display: block;
+  //  opacity: .7;
+  //  bottom: 70px;
+  //  fill: $white;
+  //  max-width: 26px;
+  //  max-height: 16px;
+  //  cursor: pointer;
+  //  z-index: 10;
+  //
+  //  &:hover {
+  //    opacity: 1;
+  //  }
 
   }
-}
