--- a/source/style/blocks/_section-title.scss
+++ b/source/style/blocks/_section-title.scss
@@ -25,9 +25,8 @@
       bottom: -21px;
       content: '';
       height: 3px;
-      left: 50%;
+      @include centered('x');
       position: absolute;
-      transform: translate(-50%);
       width: 89px;
     }
   }
