--- a/source/template/blocks/mixins.pug
+++ b/source/template/blocks/mixins.pug
@@ -13,10 +13,10 @@ mixin nav(className, items)
                 li(class=`${className}__item`)
                     a(class=`${className}__link`, href=`${link}`)=item
 
-mixin sectionTitle(svgName, title)
-    .section-title
+mixin sectionTitle(svg, title, modificator)
+    .section-title(class=`section-title--${modificator}`)
         svg.section-title__img
-            use(xlink:href="assets/img/sprite.svg#" + svgName)
+            use(xlink:href="assets/img/sprite.svg#" + svg)
         h2.section-title__text=title
 
 mixin blockTitle(title, status)
@@ -37,3 +37,26 @@ mixin skills(title, items)
                         circle.skill__circle-under(cx="50%" cy="50%" r=50)
                         circle.skill__circle-above(class=`skill__circle-above--${modificator}` cx="50%" cy="50%" r="50" transform="rotate(-90 60 60)")
                     span.skill__title=item
+
+mixin leftTriangle(modificator)
+    svg.triangle.triangle__left(class=`triangle--${modificator}` viewbox="0 0 1000 110" preserveAspectRatio="none")
+        polygon(points="0,0 0,110 1000, 110")
+
+mixin rightTriangle(modificator)
+    svg.triangle.triangle__right(class=`triangle--${modificator}` viewbox="0 0 1000 110" preserveAspectRatio="none")
+        polygon(points="0,110 1000,110 1000,0")
+
+mixin arrow(modificator)
+    svg.arrow(class=`arrow--${modificator}` viewBox="0 0 25.18 16.164")
+        use(xlink:href="assets/img/sprite.svg#arrow_down")
+
+mixin form(className, items, textarea)
+    form(class=`${className}`, method='post', action='')
+        each type, item in items
+            fieldset(class=`${className}__item`)
+                label(class=`${className}__lebel`)
+                    input(class=`${className}__input`, name=type, type=type,  placeholder=item, required)
+        each type, item in textarea
+            fieldset(class=`${className}__item`)
+                label(class=`${className}__lebel`)
+                    textarea(class=`${className}__textarea`, name=type, type=type,  placeholder=item)
