--- a/source/template/blocks/footer.pug
+++ b/source/template/blocks/footer.pug
@@ -5,10 +5,10 @@ mixin footer()
                 |Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
         .footer__item.footer__item--center
             +nav('footer-nav', {
-                'Мои работы': './portfolio.html',
+                'Мои работы': './works.html',
                 'Обо мне': './about.html',
                 'Блог': './blog.html',
-                'Авторизация': './authorization.html'
+                'Авторизация': './index.html'
             })
             +ul('social', 'footer',
             {
