--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -19,6 +19,6 @@ block content
                   github: "https://github.com/b-ars07",
                   in: "https://www.linkedin.com/in/arseny-berezin-b58567113/"
               })
-            +nav('welcome-menu', {'Мои работы':'./portfolio.html', 'Обо мне':'./about.html', 'Блог':'./blog.html'})
+            +nav('welcome-menu', {'Мои работы':'./works.html', 'Обо мне':'./about.html', 'Блог':'./blog.html'})
           //-form.card_autorization
   +copyright('index-page')
