--- a/source/style/blocks/_arrow.scss
+++ b/source/style/blocks/_arrow.scss
@@ -2,8 +2,8 @@
   display: block;
   opacity: .7;
   fill: $white;
-  max-width: 26px;
-  max-height: 16px;
+  width: 26px;
+  height: 16px;
   cursor: pointer;
   z-index: 11;
 
@@ -19,5 +19,13 @@
   }
   &--feedback {
     margin: 0 auto;
+    transform: rotate(180deg);
   }
+}
+
+.arrow--slider {
+  width: 43px;
+  height: 27px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.16);
+  opacity: 1;
 }
