--- a/source/style/helpers/_variables.scss
+++ b/source/style/helpers/_variables.scss
@@ -6,6 +6,7 @@ $sectionTitleColor: #373e42;
 $blockTitleColor: #566358;
 $bgAboutLeft: #ebefe2;
 $bgAboutRight:#f4f5f0;
+$darkGrey: #5d5a55;
 
 //-Text
 $lightWeight: 300;
