--- a/source/style/blocks/_card.scss
+++ b/source/style/blocks/_card.scss
@@ -1,13 +1,62 @@
 .card {
-  border-radius: 4px 5px 5px 4px;
   background-color: rgba(#122620, .6);
-  text-align: center;
-  overflow: hidden;
-  margin: auto;
-  display: block;
+  transition: 0.6s;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 5px;
+  position: relative;
+  width: 394px;
+  height: 426px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 5px;
+}
 
-  &__content {
-    padding: 40px 66px;
+.card__wrapper {
+    display: block;
+    margin: auto;
+    overflow: hidden;
+    text-align: center;
+
+    &--active .card{
+      transform: rotateY(180deg);
+    }
   }
 
+.card__welcome, .card__auth {
+    backface-visibility: hidden;
+    @include centered(full);
+  }
+
+.card__welcome {
+    z-index: 2;
+    display: none;
+    transform: rotateY(0deg);
+  }
+
+.card__auth {
+    transform: rotateY(0deg);
+  }
+
+.card__content {
+    padding: 38px 20px;
+  }
+
+.card__content-text {
+  font-weight: $hardWeight;
+  color: rgba($white, .8);
+  margin-bottom: 20px;
 }
+
+.card__content-radio {
+    display: flex;
+    justify-content: center;
+
+    .checkbox {
+      margin-bottom: 0;
+      margin-right: 40px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
