--- a/source/style/blocks/_header.scss
+++ b/source/style/blocks/_header.scss
@@ -1,7 +1,6 @@
 .header {
   background: url('../img/bg-header.png') no-repeat center/cover;
   height: 600px;
-  padding: 30px;
   position: relative;
   width: 100%;
 
@@ -14,13 +13,15 @@
     top: 0;
     width: 100%;
   }
+}
 
-  &__inner {
+.header__inner {
     z-index: 2;
+    padding: 30px;
   }
 
-  &__portfolio,
-  &__blog {
+.header__portfolio,
+.header__blog {
     position: absolute;
     margin: 0 auto;
     max-width: 1175px;
@@ -33,28 +34,22 @@
     right: 0;
     z-index: -1;
   }
-  &__content {
+.header__content {
     width: 100%;
     text-align: center;
     left: 0;
-    transform: translateY(45%);
-  }
+    @include centered(y);
+    top: 46%;
+}
 
-  //&__arrow {
-  //  position: absolute;
-  //  left: 50%;
-  //  transform: translateX(-50%);
-  //  display: block;
-  //  opacity: .7;
-  //  bottom: 70px;
-  //  fill: $white;
-  //  max-width: 26px;
-  //  max-height: 16px;
-  //  cursor: pointer;
-  //  z-index: 10;
-  //
-  //  &:hover {
-  //    opacity: 1;
-  //  }
+.header--blog {
+  height: 430px;
+  padding: 14px 30px;
 
+
+  .header__content {
+    position: relative;
+    transform: none;
+    margin-top: 30px;
   }
+}
