--- a/source/style/helpers/_mixins.scss
+++ b/source/style/helpers/_mixins.scss
@@ -27,4 +27,11 @@
     top: 50%;
     transform: translateY(-50%);
   }
+
+  @if $axis == 'full' {
+    bottom:0;
+    left:0;
+    right:0;
+    top:0;
+  }
 }
