--- a/source/template/blocks/mixins.pug
+++ b/source/template/blocks/mixins.pug
@@ -19,9 +19,12 @@ mixin sectionTitle(svg, title, modificator)
             use(xlink:href="assets/img/sprite.svg#" + svg)
         h2.section-title__text=title
 
-mixin blockTitle(title, status)
-    if status=='line'
-        h4.block-title--line
+mixin blockTitle(title, status, modificator)
+    if status=='line' && modificator
+        h4.block-title--line(class=`block-title--${modificator}`)
+            span.block-title__text=title
+    else if modificator
+        h4(class=`block-title--${modificator}`)
             span.block-title__text=title
     else
         h4.block-title
@@ -47,16 +50,23 @@ mixin rightTriangle(modificator)
         polygon(points="0,110 1000,110 1000,0")
 
 mixin arrow(modificator)
-    svg.arrow(class=`arrow--${modificator}` viewBox="0 0 25.18 16.164")
+    svg.arrow#arrow(class=`arrow--${modificator}` viewBox="0 0 25.18 16.164")
         use(xlink:href="assets/img/sprite.svg#arrow_down")
 
 mixin form(className, items, textarea)
     form(class=`${className}`, method='post', action='')
         each type, item in items
             fieldset(class=`${className}__item`)
-                label(class=`${className}__lebel`)
+                label(class=`${className}__label`)
                     input(class=`${className}__input`, name=type, type=type,  placeholder=item, required)
         each type, item in textarea
             fieldset(class=`${className}__item`)
                 label(class=`${className}__lebel`)
                     textarea(class=`${className}__textarea`, name=type, type=type,  placeholder=item)
+
+mixin checkbox(item, text, type, value)
+    div(class=`checkbox`)
+        div(class=`checkbox__elem checkbox__elem--${type}`)
+            input(class=`checkbox__input checkbox__${item}`, value=value, name=item, type=type)
+            label(class=`checkbox__label`)
+        p(class=`checkbox__text`)=text
